kub/CKA/9~/ingress-route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec: 
  backend: 
    serviceName: our-service
    servicePort: 80
